# internal/delivery/docs/swagger.json
@@ -187,7 +187,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Found matrixes",
+                        "description": "Found matrices",
                         "schema": {
                             "type": "array",
                             "items": {
@@ -301,6 +301,18 @@
                         "name": "page",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Microcategory ID if you need",
+                        "name": "microcategory_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Region ID if you need",
+                        "name": "region_id",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -309,7 +321,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Matrix"
+                                "$ref": "#/definitions/swagger.Matrix"
                             }
                         }
                     },
@@ -770,6 +782,29 @@
                     "type": "string"
                 },
                 "time_start": {
+                    "type": "string"
+                }
+            }
+        },
+        "swagger.Matrix": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.MatrixNode"
+                    }
+                },
+                "is_baseline": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "parent_name": {
+                    "type": "string"
+                },
+                "timestamp": {
                     "type": "string"
                 }
             }
